Fix code overflow

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -1,3 +1,4 @@
 pre.pygments.highlight {
     padding: 10px;
+    overflow: auto;
 }
